--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="main.js" defer ></script>
-    <!-- <script src="main.js" type="module"></script> -->
+<!-- since there are two js files, use source as the general js file. -->
+    <script src="script.js" type="module" defer></script>
     <link rel="stylesheet" href="styles.css">
     <title>CARD GAME</title>
 </head>
