--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- since there are two js files, use source as the general js file. -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- since there are two js files, use source as the general js file. -->
     <script src="script.js" type="module" defer></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>CARD GAME</title>
-</head>
-<body>
-    <h1>Hello player</h1>
-    
-</body>
+  </head>
+  <body>
+    <div class="computer-deck deck">26</div>
+    <div class="computer-card-slot card-slot">
+        <div class='card red' data-value="9 ♥">
+            ♥
+        </div>
+    </div>
+    <div class="text">score</div>
+    <div class="player-deck deck">26</div>
+    <div class="player-card-slot card-slot"></div>
+  </body>
 </html>
