--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <title>CARD GAME</title>
 </head>
 <body>
-    <h1>Hello player</h1>
+    <div class="computer-deck deck">26</div>
+    <div class="computer-card-slot card-slot"></div>
+    <div class="text"></div>
+    <div class="player-deck deck"></div>
+    <div class="player-card-slot card-slot"></div>
+
+    
     
 </body>
 </html>
