--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <div class="computer-deck deck">26</div>
-    <div class="computer-card-slot card-slot"></div>
+    <div class="computer-card card-slot"></div>
     <div class="text"></div>
     <div class="player-deck deck"></div>
-    <div class="player-card-slot card-slot"></div>
+    <div class="player-card card-slot"></div>
     
 
     
