added a funtion that flips cards a decreases deck num

--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
     <title>CARD GAME</title>
 </head>
 <body>
-    <div class="computer-deck deck">26</div>
-    <div class="computer-card card-slot"></div>
+    <div class="computer-deck deck"></div>
+    <div class="computer-card-slot card-slot"></div>
     <div class="text"></div>
     <div class="player-deck deck"></div>
-    <div class="player-card card-slot"></div>
-    
-
+    <div class="player-card-slot card-slot"></div>
     
 </body>
 </html>
