added sound effect to game

--- a/index.html
+++ b/index.html
@@ -26,5 +26,13 @@
       <div class="player-deck deck"></div>
       <div class="player-card-slot card-slot"></div>
     </section>
+    <br><br><br><br><br>
+    <br><br><br>
+    <input type="button" value="Next Turn" id="mainbtn" onclick="lotocards();">
+    <div class="resetbtn"><a id="resetbtn" onclick="location.reload();">↺</a></div>
+
+
+    <div class="copyright">Shawasty ™ 2022</div>
+  
   </body>
 </html>
