added reset and next buttons to project

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <header>
       <h3>&hearts; &spades; Shawasty's Card War Game &diams; &clubs;</h3>
       <ul>
-          <li>ABOUT</li>
-          <li>INSTRUCTIONS</li>
-
+        <li>ABOUT</li>
+        <li>INSTRUCTIONS</li>
       </ul>
     </header>
 
@@ -26,13 +25,13 @@
       <div class="player-deck deck"></div>
       <div class="player-card-slot card-slot"></div>
     </section>
-    <br><br><br><br><br>
-    <br><br><br>
-    <input type="button" value="Next Turn" id="mainbtn" onclick="lotocards();">
-    <div class="resetbtn"><a id="resetbtn" onclick="location.reload();">↺</a></div>
+    <br /><br /><br /><br /><br />
 
-
+    <footer class="row">
+      <button id="reset">RESET</button>
+      <button id="next">NEXT ROUND</button>
+    </footer>
+    <br>
     <div class="copyright">Shawasty ™ 2022</div>
-  
   </body>
 </html>
