fixed a audio play and pause function

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header>
       <h3>&hearts; &spades; Shawasty's Card War Game &diams; &clubs;</h3>
       <ul>
-        <li>ABOUT</li>
-        <li>INSTRUCTIONS</li>
+        <li ><a href="">ABOUT</a></li>
+        <li><a href="">INSTRUCTIONS</a></li>
       </ul>
     </header>
 
@@ -28,10 +28,12 @@
     <br /><br /><br /><br /><br />
 
     <footer class="row">
+      <button id="pause">PAUSE</button>
       <button id="reset">RESET</button>
       <button id="next">NEXT ROUND</button>
     </footer>
     <br>
-    <div class="copyright">Shawasty ™ 2022</div>
+    <p id="copyright"">Shawasty ™ 2022</p>
+   
   </body>
 </html>
