added a cutdown timer to game

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li ><a href="">ABOUT</a></li>
         <li><a href="">INSTRUCTIONS</a></li>
       </ul>
+      <section class="checks">
+      <h2 class="timer">TIMER: <span id="timeNum"></span></h2>
+      </section>
     </header>
 
     <section class="tiles">
@@ -28,7 +31,7 @@
     <br /><br /><br /><br /><br />
 
     <footer class="row">
-      <button id="pause">PAUSE</button>
+      <button id="music">MUSIC</button>
       <button id="reset">RESET</button>
       <button id="next">NEXT ROUND</button>
     </footer>
