worked on timer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="">INSTRUCTIONS</a></li>
       </ul>
       <section class="checks">
-      <h2 class="timer">TIMER: <span id="timeNum"></span></h2>
+      <h2 class="timer">TIMER : <span id="timeNum"></span></h2>
       </section>
     </header>
 
@@ -29,6 +29,10 @@
       <div class="player-card-slot card-slot"></div>
     </section>
     <br /><br /><br /><br /><br />
+
+    <section class="avatar-box">
+      <img src="" alt="" id="player-avatar">
+    </section>
 
     <footer class="row">
       <button id="music">MUSIC</button>
